@@ -13,6 +13,7 @@ All notable changes to this project will be documented in this file.
   - `mlabonne/Meta-Llama-3.1-8B-Instruct-abliterated`
   - `cognitivecomputations/dolphin-2.9-llama3-8b`
   - `NousResearch/Hermes-2-Pro-Mistral-7B`
+  - `huihui-ai/Qwen3-VL-8B-Instruct-abliterated` (Qwen3 for 16GB M1)
 - Parallel download support for Internet Archive datasets with rate limiting
   - New `--concurrency` / `-c` flag: Number of parallel download threads (default: 10)
   - New `--rate-limit` / `-r` flag: Maximum requests per second (default: 10.0)
